--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="boardCell">
         <div id="board">
-            <table>
+            <!-- <table>
                 <tr>
                     <td id="00"></td>
                     <td id="01"></td>
@@ -89,6 +89,89 @@
                     <td id="75"></td>
                     <td id="76"></td>
                     <td id="77"></td>
+                </tr>
+            </table> -->
+
+            <table>
+                <tr>
+                    <td id="00" class="black-square"></td>
+                    <td id="01" class="white-square"></td>
+                    <td id="02" class="black-square"></td>
+                    <td id="03" class="white-square"></td>
+                    <td id="04" class="black-square"></td>
+                    <td id="05" class="white-square"></td>
+                    <td id="06" class="black-square"></td>
+                    <td id="07" class="white-square"></td>
+                </tr>
+                <tr>
+                    <td id="10" class="white-square"></td>
+                    <td id="11" class="black-square"></td>
+                    <td id="12" class="white-square"></td>
+                    <td id="13" class="black-square"></td>
+                    <td id="14" class="white-square"></td>
+                    <td id="15" class="black-square"></td>
+                    <td id="16" class="white-square"></td>
+                    <td id="17" class="black-square"></td>
+                </tr>
+                <tr>
+                    <td id="20" class="black-square"></td>
+                    <td id="21" class="white-square"></td>
+                    <td id="22" class="black-square"></td>
+                    <td id="23" class="white-square"></td>
+                    <td id="24" class="black-square"></td>
+                    <td id="25" class="white-square"></td>
+                    <td id="26" class="black-square"></td>
+                    <td id="27" class="white-square"></td>
+                </tr>
+                <tr>
+                    <td id="30" class="white-square"></td>
+                    <td id="31" class="black-square"></td>
+                    <td id="32" class="white-square"></td>
+                    <td id="33" class="black-square"></td>
+                    <td id="34" class="white-square"></td>
+                    <td id="35" class="black-square"></td>
+                    <td id="36" class="white-square"></td>
+                    <td id="37" class="black-square"></td>
+                </tr>
+                <tr>
+                    <td id="40" class="black-square"></td>
+                    <td id="41" class="white-square"></td>
+                    <td id="42" class="black-square"></td>
+                    <td id="43" class="white-square"></td>
+                    <td id="44" class="black-square"></td>
+                    <td id="45" class="white-square"></td>
+                    <td id="46" class="black-square"></td>
+                    <td id="47" class="white-square"></td>
+                </tr>
+                <tr>
+                    <td id="50" class="white-square"></td>
+                    <td id="51" class="black-square"></td>
+                    <td id="52" class="white-square"></td>
+                    <td id="53" class="black-square"></td>
+                    <td id="54" class="white-square"></td>
+                    <td id="55" class="black-square"></td>
+                    <td id="56" class="white-square"></td>
+                    <td id="57" class="black-square"></td>
+                </tr>
+                <tr>
+                    <td id="60" class="black-square"></td>
+                    <td id="61" class="white-square"></td>
+                    <td id="62" class="black-square"></td>
+                    <td id="63" class="white-square"></td>
+                    <td id="64" class="black-square"></td>
+                    <td id="65" class="white-square"></td>
+                    <td id="66" class="black-square"></td>
+                    <td id="67" class="white-square"></td>
+                </tr>
+                <tr>
+                    <td id="70" class="white-square"></td>
+                    <td id="71" class="black-square"></td>
+                    <td id="72" class="white-square"></td>
+                    <td id="73" class="black-square"></td>
+                    <td id="74" class="white-square"></td>
+                    <td id="75" class="black-square"></td>
+                    <td id="76" class="white-square"></td>
+                    <td id="77" class="black-square"></td>
                 </tr>
             </table>
         </div>
